--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-docx-js-typescript",
+  "name": "html-docx-js-typescript-modify",
   "version": "0.1.5",
   "description": "Convert HTML documents to docx format.",
   "main": "dist/index.js",
@@ -55,12 +55,12 @@
     "html-to-docx"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/caiyexiang/html-docx-js-typescript#readme",
+  "homepage": "https://github.com/qsyjlab/html-docx-js-typescript-modify-modify#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/caiyexiang/html-docx-js-typescript.git"
+    "url": "git+https://github.com/qsyjlab/html-docx-js-typescript-modify-modify.git"
   },
   "bugs": {
-    "url": "https://github.com/caiyexiang/html-docx-js-typescript/issues"
+    "url": "https://github.com/qsyjlab/html-docx-js-typescript-modify-modify/issues"
   }
 }
