--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags",
-    "release": "npm patch && npm publish --registry http://registry.npmjs.org"
+    "release": "npm publish --registry https://registry.npmjs.org"
   },
   "keywords": [
     "html-docx-js",
